fix(tooltip): ensure tooltip is visible when has focus:within

--- a/src/scss/components/_tooltips.scss
+++ b/src/scss/components/_tooltips.scss
@@ -46,8 +46,10 @@
   visibility: hidden;
   white-space: nowrap;
 
+  .tooltip:focus-within &,
   .tooltip button:hover + &,
-  .tooltip button:focus + & {
+  .tooltip button:focus + &,
+  .tooltip button:active + & {
     opacity: 1;
     pointer-events: auto;
     transform:
